--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -28,3 +28,34 @@ div.dataTables_wrapper div.dataTables_info, div.dataTables_wrapper div.dataTable
     width: 150px;
     height: auto;
 }
+.loadImg{
+	width: 100%;
+	height: 150px;
+	margin: 10px 0;
+	
+}
+.imgPosition{
+	position: relative;
+	overflow: hidden;
+}
+.imgPosition .imgDelete{
+	 position: absolute;
+	 top: 15px;
+	 right: -50px;
+	 width: 40px;
+	 height: 40px;
+	 color: #fff !important;
+	 line-height: 40px;
+	 border-radius: 50%;
+	 background: rgba(212, 40, 40, 0.45);
+	 text-align: center;
+	 transition: all linear .3s;
+ }
+ .imgPosition:hover .imgDelete{
+	
+	right: 20px;
+ }
+ .imgDelete:hover{
+	background: rgba(212, 40, 40);
+	color: #fff !important;
+ }
